--- a/searchaddress/package.json
+++ b/searchaddress/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
